<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Digging Savannah</string>
    <string name="app_name_lower_d" translatable="false">digging Savannah</string>
    <string name="menu_settings" translatable="false">Settings</string>
    <string name="Tours" translatable="false">Tours</string>
    <string name="title_activity_tours_list" translatable="false">List of Tours</string>
    <string name="title_activity_map" translatable="false">Dig Sites</string>
    <string name="Sites" translatable="false">Sites</string>
    <string name="Map" translatable="false">Map</string>
    <string name="noEvidence" translatable="false">No evidence</string>
    <string name="dig_sav_title_desc" translatable="false">Digging Savannah</string>
    <string name="title_activity_site_description" translatable="false">SiteDescriptionActivity</string>
    <string name="more_info" translatable="false">More Info</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="title_activity_tour" translatable="false">Tour Guide</string>
    <string name="title_activity_more_info" translatable="false">More Info</string>
    <string name="armstrong">Armstrong</string>
</resources>