<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TitleScreen" >

    <ImageSwitcher
        android:id="@+id/ImageSwitcher01"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bricks31bw" >
    </ImageSwitcher>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/RelativeLayoutTitleScreenTop"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="#55000000"
            android:visibility="visible" >

            <ImageSwitcher
                android:id="@+id/ImageSwitcher02"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/dig_sav_logo" >
            </ImageSwitcher>

            <TextView
                android:id="@+id/textViewDigSavTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/ImageSwitcher02"
                android:text="@string/dig_sav_title_desc"
                android:textColor="@color/dark_brown"
                android:textSize="32sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="5" >

                <Button
                    android:id="@+id/buttonSites"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:alpha=".9"
                    android:drawableLeft="@android:drawable/ic_menu_info_details"
                    android:gravity="center"
                    android:text="@string/Sites"
                    android:textSize="40sp" />

                <Button
                    android:id="@+id/buttonTours"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:alpha=".9"
                    android:drawableLeft="@android:drawable/ic_menu_compass"
                    android:gravity="center"
                    android:text="@string/Tours"
                    android:textSize="40sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="5" >

                <Button
                    android:id="@+id/buttonMap"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:alpha=".9"
                    android:drawableLeft="@android:drawable/ic_menu_mylocation"
                    android:gravity="center"
                    android:text="@string/Map"
                    android:textSize="40sp" />

                <Button
                    android:id="@+id/buttonMoreInfo"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="5"
                    android:alpha=".9"
                    android:drawableLeft="@android:drawable/ic_menu_more"
                    android:gravity="center"
                    android:text="@string/more_info"
                    android:textSize="40sp" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/armstrongView"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/armstrong"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/armstrong_maroon"
            android:textSize="48sp" />

    </LinearLayout>

</RelativeLayout>